--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:id="@+id/room_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp" />
+        android:layout_marginTop="10dp"
+        />
 
 </LinearLayout>
