--- a/app/src/main/res/layout/item_guest_in_room.xml
+++ b/app/src/main/res/layout/item_guest_in_room.xml
@@ -1,51 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:layout_width="match_parent"
-    android:padding="15dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/roomItemBackground"
-    android:layout_height="wrap_content">
-
+    android:background="@color/guestItemBackground"
+    android:padding="15dp"
+    >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:layout_marginLeft="5dp">
+        android:layout_marginLeft="10dp"
+        >
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_plus"/>
+            android:src="@drawable/ic_plus"
+            />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:orientation="vertical">
+        android:layout_marginLeft="15dp"
+        android:orientation="vertical"
+        >
 
         <TextView
-            android:id="@+id/room_name_item"
+            android:id="@+id/item_guest_in_room_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/guestItemProps"
             android:fontFamily="sans-serif-medium"
-            android:text="TextView"
-            android:textColor="@color/roomItemProps"
             android:textSize="18dp"
-            android:layout_marginBottom="5dp"/>
+            android:text="TextView"/>
 
         <TextView
-            android:id="@+id/guest_name_in_room_item"
+            android:id="@+id/item_guest_in_room_birth_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/guestItemProps"
+            android:layout_marginTop="5dp"
+            android:textSize="14dp"
             android:fontFamily="sans-serif-medium"
-            android:text="TextView"
-            android:textColor="@color/roomItemProps"
-            android:textSize="14dp" />
-    </LinearLayout>
+            android:text="TextView"/>
 
+    </LinearLayout>
 
 
 </LinearLayout>
