--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
+    android:background="#fff"
     tools:context=".activity.CreateRoomActivity">
 
     <TextView
@@ -75,12 +76,13 @@
         android:fontFamily="sans-serif-medium"
         />
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/create_room_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
-        android:onClick="submitNewRoom"
+        android:textColor="#fff"
+        android:theme="@style/ButtonTheme"
         android:fontFamily="sans-serif-medium"
         android:layout_marginTop="30dp"
         />
