--- a/app/src/main/res/layout/fragment_attribute_in_room.xml
+++ b/app/src/main/res/layout/fragment_attribute_in_room.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".activity.MainActivity">
+    android:background="#fff"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-medium"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:textSize="20dp"
         android:textAllCaps="false"
         android:gravity="center"
-        android:drawableLeft="@drawable/ic_bed"
-        android:text="   Rooms"/>
+        android:drawableLeft="@drawable/ic_property"
+        android:text="   Attribute"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/room_list"
+        android:id="@+id/attribute_in_room_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_height="match_parent">
+
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
