--- a/app/src/main/res/layout/fragment_guest_in_room.xml
+++ b/app/src/main/res/layout/fragment_guest_in_room.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="#fff"
+    >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        android:gravity="center"
+        android:drawableLeft="@drawable/ic_man"
+        android:text="   Guest Information"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_in_room_list"
