--- a/app/src/main/res/layout/item_guest_in_room.xml
+++ b/app/src/main/res/layout/item_guest_in_room.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/guestItemBackground"
+    android:background="?android:attr/selectableItemBackground"
     android:padding="15dp"
     >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         >
 
         <ImageView
