--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,13 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#46bff8</color>
     <color name="roomItemBackground">#fff</color>
     <color name="roomItemProps">#888</color>
     <color name="guestItemBackground">#fff</color>
     <color name="guestItemProps">#888</color>
     <color name="actionBarBackground">#46bff8</color>
     <color name="roomDetailTabIndicatorColor">#fff</color>
+    <color name="btnRoomEditBackground">#46bff8</color>
+    <color name="btnRoomCreationSubmit">#46bff8</color>
 </resources>
