--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -4,87 +4,98 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center"
-    android:background="#fff"
     tools:context=".activity.CreateRoomActivity">
 
-    <TextView
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"
+        ></include>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Create Room"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:gravity="center"
-        android:textSize="40dp"
-        android:textAllCaps="true"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginBottom="40dp"
-        />
+        android:background="#fff"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Create Room"
+            android:gravity="center"
+            android:textSize="40dp"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginBottom="40dp"
+            />
 
 
-    <EditText
-        android:id="@+id/create_room_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Room name"
-        android:inputType="text"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:fontFamily="sans-serif-medium"
-        />
+        <EditText
+            android:id="@+id/create_room_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Room name"
+            android:inputType="text"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:fontFamily="sans-serif-medium"
+            />
 
-    <EditText
-        android:id="@+id/create_guest_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Guest name"
-        android:inputType="text"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:fontFamily="sans-serif-medium"
-        />
+        <EditText
+            android:id="@+id/create_guest_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Guest name"
+            android:inputType="text"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:fontFamily="sans-serif-medium"
+            />
 
-    <EditText
-        android:id="@+id/create_guest_birthdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Birthdate"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:inputType="date"
-        android:fontFamily="sans-serif-medium"
-        />
+        <EditText
+            android:id="@+id/create_guest_birthdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Birthdate"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:inputType="date"
+            android:fontFamily="sans-serif-medium"
+            />
 
-    <EditText
-        android:id="@+id/create_guest_id_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Identifier card"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:inputType="number"
-        android:fontFamily="sans-serif-medium"
-        />
+        <EditText
+            android:id="@+id/create_guest_id_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Identifier card"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:inputType="number"
+            android:fontFamily="sans-serif-medium"
+            />
 
-    <EditText
-        android:id="@+id/create_guest_phone_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Phone number"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:inputType="phone"
-        android:fontFamily="sans-serif-medium"
-        />
+        <EditText
+            android:id="@+id/create_guest_phone_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Phone number"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:inputType="phone"
+            android:fontFamily="sans-serif-medium"
+            />
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/create_room_submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:textColor="#fff"
-        android:theme="@style/ButtonTheme"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginTop="30dp"
-        />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/create_room_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:textColor="#fff"
+            android:theme="@style/ButtonTheme"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginTop="30dp"
+            />
+    </LinearLayout>
 
 </LinearLayout>
