--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    >
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<group android:checkableBehavior="single">
     <item
         android:id="@+id/move_to_create_room"
         android:icon="@drawable/ic_plus"
-        android:title="Create room"
-        app:showAsAction="always"
-        android:orderInCategory="0"/>
-
+        android:title="Create room"/>
+    <item
+        android:id="@+id/move_to_general_setting"
+        android:icon="@drawable/ic_gear"
+        android:title="Settings" />
+</group>
 </menu>
