--- a/app/src/main/res/layout/activity_room_detail.xml
+++ b/app/src/main/res/layout/activity_room_detail.xml
@@ -6,6 +6,9 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <include layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
