--- a/app/src/main/res/layout/activity_general_setting.xml
+++ b/app/src/main/res/layout/activity_general_setting.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#fff"
     >
 
@@ -9,7 +10,7 @@
         android:id="@+id/toolbar"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/utility_list"
+        android:id="@+id/general_setting_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
