--- a/app/src/main/res/layout/activity_create_bill.xml
+++ b/app/src/main/res/layout/activity_create_bill.xml
@@ -20,4 +20,16 @@
 
     </LinearLayout>
 
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/create_bill_submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:theme="@style/ButtonTheme"
+        android:fontFamily="sans-serif-medium"
+        android:layout_gravity="center"
+        />
+
 </LinearLayout>
