--- a/app/src/main/res/layout/view_water_calculator.xml
+++ b/app/src/main/res/layout/view_water_calculator.xml
@@ -11,49 +11,83 @@
     android:paddingTop="10dp"
     >
 
-    <TextView
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:text="Water: "
-        android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        />
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
+        android:layout_weight="1"
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        android:text="("
-        />
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Water: "
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-medium"
+            />
 
-    <EditText
-        android:id="@+id/electricity_last_index"
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="Counter"
-        android:inputType="number"
-        android:maxLines="1"
-        android:fontFamily="sans-serif-medium"
-        android:textSize="12dp"/>
+        android:layout_weight="3">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        android:text=") x "
-        />
 
-    <TextView
-        android:id="@+id/unit_fee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:fontFamily="sans-serif-medium"
-        android:text="3500.0"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-medium"
+            android:text="("
+            />
+
+        <EditText
+            android:id="@+id/water_counter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Counter"
+            android:inputType="number"
+            android:maxLines="1"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="12dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-medium"
+            android:text=")"
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-medium"
+            android:text="x "
+            />
+
+        <TextView
+            android:id="@+id/unit_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-medium"
+            android:text="3500.0"
+            />
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
