--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Send to: "
+            android:text="Gửi tới: "
             android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
             />
@@ -36,7 +36,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Message review: "
+            android:text="Xem trước tin nhắn: "
             android:textSize="14sp"
             android:layout_marginTop="15dp"
             android:fontFamily="sans-serif-medium"
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="Send"
+            android:text="Gửi"
             android:textAllCaps="false"
             android:textColor="#fff"
             android:theme="@style/ButtonTheme"
