--- a/app/src/main/res/layout/fragment_guest_in_room.xml
+++ b/app/src/main/res/layout/fragment_guest_in_room.xml
@@ -13,11 +13,12 @@
         android:fontFamily="sans-serif-medium"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textAllCaps="false"
         android:gravity="center"
         android:drawableLeft="@drawable/ic_man"
-        android:text="   Guest Information"/>
+        android:drawablePadding="10dp"
+        android:text="Thông tin khách"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_in_room_list"
