--- a/app/src/main/res/layout/fragment_utility_in_room.xml
+++ b/app/src/main/res/layout/fragment_utility_in_room.xml
@@ -14,11 +14,12 @@
         android:fontFamily="sans-serif-medium"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textAllCaps="false"
         android:gravity="center"
         android:drawableLeft="@drawable/ic_property"
-        android:text="   Utilities"/>
+        android:drawablePadding="10dp"
+        android:text="Tiện ích"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/utility_in_room_list"
