--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -1,71 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:layout_width="match_parent"
-    android:padding="10dp"
     android:orientation="horizontal"
     android:gravity="center"
+    android:layout_marginTop="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
     android:background="?android:attr/selectableItemBackground"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
-        android:layout_marginLeft="5dp">
-        <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff"
+        android:padding="10dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        >
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_plus"/>
-    </LinearLayout>
+            android:background="@color/colorAccent"
+            android:layout_marginLeft="5dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:orientation="vertical">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_plus"/>
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/room_name_item"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="TextView"
-            android:textColor="@color/roomItemProps"/>
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/guest_name_in_room_item"
+            <TextView
+                android:id="@+id/room_name_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:text="TextView"
+                android:textColor="@color/roomItemProps"/>
+
+            <TextView
+                android:id="@+id/guest_name_in_room_item"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:text="TextView"
+                android:textColor="@color/roomItemProps"
+                android:textSize="12dp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"/>
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-medium"
-            android:text="TextView"
-            android:textColor="@color/roomItemProps"
-            android:textSize="12dp" />
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            >
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/item_room_create_bill"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:text="Tạo hóa đơn"
+                android:textSize="12dp"
+                android:textAllCaps="false"
+                android:textColor="#fff"
+                android:theme="@style/ButtonTheme"
+                android:fontFamily="sans-serif-medium"
+                />
+
+        </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight="1"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/item_room_create_bill"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:text="Create bill"
-            android:textSize="12dp"
-            android:textAllCaps="false"
-            android:textColor="#fff"
-            android:theme="@style/ButtonTheme"
-            android:fontFamily="sans-serif-medium"
-            />
-
-    </LinearLayout>
 
 </LinearLayout>
