--- a/app/src/main/res/layout/dialog_edit_utility.xml
+++ b/app/src/main/res/layout/dialog_edit_utility.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="#fff"
     >
 
     <LinearLayout
@@ -11,16 +12,19 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="5dp"
-        android:background="@color/colorAccent">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/dialog_edit_utility_header"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
             android:text="Text View"
+            android:padding="5dp"
             android:textColor="#fff"
             android:fontFamily="sans-serif-medium"
             android:textSize="15sp"
+            android:gravity="center_horizontal"
             />
 
     </LinearLayout>
