--- a/app/src/main/res/layout/item_guest_in_room.xml
+++ b/app/src/main/res/layout/item_guest_in_room.xml
@@ -5,18 +5,21 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="?android:attr/selectableItemBackground"
-    android:padding="10dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
     >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"
         android:layout_marginLeft="5dp"
         >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/item_guest_in_room_avatar"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:src="@drawable/ic_plus"
             />
 
@@ -24,9 +27,10 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginLeft="15dp"
         android:orientation="vertical"
+        android:gravity="center_vertical"
         >
 
         <TextView
@@ -35,6 +39,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/guestItemProps"
             android:fontFamily="sans-serif-medium"
+            android:textSize="16sp"
             android:text="TextView"/>
 
         <TextView
@@ -42,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/guestItemProps"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:fontFamily="sans-serif-medium"
             android:text="TextView"/>
 
