--- a/app/src/main/res/layout/item_utility_in_room.xml
+++ b/app/src/main/res/layout/item_utility_in_room.xml
@@ -2,29 +2,60 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
+    android:padding="6dp"
+    android:orientation="horizontal"
     >
 
-    <TextView
-        android:id="@+id/item_utility_in_room_name"
-        android:fontFamily="sans-serif-medium"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:text="TextView"/>
+        android:orientation="vertical"
+        >
+
+        <ImageView
+            android:id="@+id/item_utility_in_room_icon"
+            android:layout_width="60dp"
+            android:layout_height="60dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        >
+
+        <TextView
+            android:id="@+id/item_utility_in_room_name"
+            android:fontFamily="sans-serif-medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TextView"/>
+
+    </LinearLayout>
 
     <View
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1"/>
 
-    <TextView
-        android:id="@+id/item_utility_in_room_fee"
+
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:layout_marginRight="15dp"
-        android:text="TextView"/>
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        >
+
+        <TextView
+            android:id="@+id/item_utility_in_room_fee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:text="TextView"/>
+    </LinearLayout>
+
 
 
 </LinearLayout>
