--- a/app/src/main/res/layout/item_general_setting.xml
+++ b/app/src/main/res/layout/item_general_setting.xml
@@ -6,6 +6,13 @@
     android:background="?android:attr/selectableItemBackground"
     >
 
+    <ImageView
+        android:id="@+id/item_general_setting_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+
+        />
+
     <TextView
         android:id="@+id/item_general_setting_name"
         android:layout_width="wrap_content"
@@ -13,7 +20,7 @@
         android:textSize="15sp"
         android:text="textView"
         android:gravity="center"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="10dp"
         android:fontFamily="sans-serif-medium"
         />
 
