--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -16,14 +16,13 @@
         android:background="#fff"
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         >
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/iv_avatar"
