--- a/app/src/main/res/layout/item_utility_in_room.xml
+++ b/app/src/main/res/layout/item_utility_in_room.xml
@@ -54,6 +54,14 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
             android:text="TextView"/>
+
+        <TextView
+            android:id="@+id/item_utility_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:layout_marginLeft="5dp"
+            android:text="TextView"/>
     </LinearLayout>
 
 
