--- a/app/src/main/res/layout/view_cab_calculator.xml
+++ b/app/src/main/res/layout/view_cab_calculator.xml
@@ -30,7 +30,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3">
+        android:layout_weight="4">
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,6 +49,7 @@
             android:inputType="number"
             android:maxLines="1"
             android:fontFamily="sans-serif-medium"
+            android:maxLength="3"
             android:textSize="12dp"/>
 
         <TextView
@@ -65,7 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:layout_weight="1">
+        android:layout_weight="1.5">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,6 +81,16 @@
             android:textSize="12sp"
             android:fontFamily="sans-serif-medium"
             android:text="3500.0"
+            />
+
+        <TextView
+            android:id="@+id/currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_marginLeft="5dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="VND"
             />
 
     </LinearLayout>
