--- a/app/src/main/res/layout/view_electricity_calculator.xml
+++ b/app/src/main/res/layout/view_electricity_calculator.xml
@@ -31,7 +31,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="3">
+        android:layout_weight="4">
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,11 +46,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:inputType="number"
-            android:maxLines="1"
-            android:hint="Số mới (kWh)"
             android:fontFamily="sans-serif-medium"
-            android:textSize="12dp"/>
+            android:hint="Số mới (kWh)"
+            android:inputType="number"
+            android:maxLength="7"
+            android:maxLines="1"
+            android:textSize="12dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -67,6 +68,7 @@
             android:layout_weight="1"
             android:maxLines="1"
             android:inputType="number"
+            android:maxLength="7"
             android:hint="Số cũ (kWh)"
             android:fontFamily="sans-serif-medium"
             android:textSize="12dp"/>
@@ -85,7 +87,7 @@
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:layout_weight="1">
+        android:layout_weight="1.5">
 
         <TextView
             android:layout_width="wrap_content"
@@ -101,6 +103,16 @@
             android:textSize="12sp"
             android:fontFamily="sans-serif-medium"
             android:text="3500.0"
+            />
+
+        <TextView
+            android:id="@+id/currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:layout_marginLeft="5dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="VND"
             />
 
     </LinearLayout>
