--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -266,8 +266,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tạo phòng"
+            android:textSize="13dp"
             android:textAllCaps="false"
-            android:textColor="#fff"
             android:theme="@style/ButtonTheme"
             android:fontFamily="sans-serif-medium"
             android:layout_gravity="center"
