--- a/app/src/main/res/layout/fragment_guest_in_room.xml
+++ b/app/src/main/res/layout/fragment_guest_in_room.xml
@@ -7,6 +7,26 @@
     android:background="#fff"
     >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="end"
+        android:padding="5dp"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/create_room_submit"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Thêm khách"
+            android:textAllCaps="false"
+            android:theme="@style/ButtonTheme"
+            android:fontFamily="sans-serif-medium"
+            android:layout_gravity="center"
+            />
+
+    </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/guest_in_room_list"
         android:layout_width="match_parent"
