--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="actionBarBackground">#46bff8</color>
     <color name="roomDetailTabIndicatorColor">#fff</color>
     <color name="btnRoomEditBackground">#46bff8</color>
-    <color name="btnRoomCreationSubmit">#46bff8</color>
+    <!--<color name="btnRoomCreationSubmit">#46bff8</color>-->
+    <color name="btnRoomCreationSubmit">#ebf0ef</color>
     <color name="btnCancel">#EE2C2C</color>
 </resources>
