Refactor code, change database schemas

--- a/app/src/main/res/layout/fragment_payment_history.xml
+++ b/app/src/main/res/layout/fragment_payment_history.xml
@@ -1,15 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="vertical"
+    >
 
     <android.support.v7.widget.RecyclerView
 
         android:id="@+id/payment_history_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
     </android.support.v7.widget.RecyclerView>
+
+    <LinearLayout
+        android:id="@+id/payment_history_empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_transaction"
+            android:alpha="0.6"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Bạn chưa thanh toán hóa đơn nào"
+            android:fontFamily="sans-serif-medium"
+            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
