--- a/app/src/main/res/layout/item_payment_history.xml
+++ b/app/src/main/res/layout/item_payment_history.xml
@@ -8,9 +8,10 @@
     >
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="10dp"
+        android:src="@drawable/ic_bill"
         />
 
     <TextView
