--- a/app/src/main/res/layout/fragment_payment_history.xml
+++ b/app/src/main/res/layout/fragment_payment_history.xml
@@ -6,12 +6,83 @@
     android:orientation="vertical"
     >
 
-    <android.support.v7.widget.RecyclerView
 
-        android:id="@+id/payment_history_list"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            >
+
+
+            <View
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:text="Số tiền" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Ngày tạo hóa đơn"
+                android:textSize="12sp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginRight="10dp"
+                />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Ngày thanh toán"
+                android:layout_weight="1"
+                android:textSize="12sp"
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginRight="10dp"
+                />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="#c9c9c9"/>
+
+        <android.support.v7.widget.RecyclerView
+
+            android:id="@+id/payment_history_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+
+
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:id="@+id/payment_history_empty_view"
